[gd_scene load_steps=7 format=3 uid="uid://cjanu22ram8tl"]

[ext_resource type="PackedScene" uid="uid://bmyqw6r202kq7" path="res://map.tscn" id="1_ke1pj"]
[ext_resource type="Script" path="res://World.gd" id="1_s2hv2"]
[ext_resource type="Environment" uid="uid://ejc4jwpqfdx4" path="res://World.tres" id="2_7fqp6"]
[ext_resource type="Shader" path="res://chungus.gdshader" id="5_3sxrk"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_b401s"]
shader = ExtResource("5_3sxrk")
shader_parameter/SCAN_RADIUS = 2.0
shader_parameter/strength = 0.0

[sub_resource type="Environment" id="Environment_4yn81"]

[node name="World" type="Node3D"]
script = ExtResource("1_s2hv2")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = ExtResource("2_7fqp6")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.429092, -0.855136, 0.2909, -0.480639, 0.488836, 0.728028, -0.764766, 0.172574, -0.620767, 0, 0, 0)
visible = false
shadow_enabled = true

[node name="map" parent="." instance=ExtResource("1_ke1pj")]

[node name="player_spawner" type="MultiplayerSpawner" parent="."]
_spawnable_scenes = PackedStringArray("res://player.tscn")
spawn_path = NodePath("../players")

[node name="effigy_spawner" type="MultiplayerSpawner" parent="."]
_spawnable_scenes = PackedStringArray("res://chungus.tscn")
spawn_path = NodePath("../effigys")

[node name="effigys" type="Node3D" parent="."]

[node name="players" type="Node3D" parent="."]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="main_menu" type="PanelContainer" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -269.0
offset_top = -122.5
offset_right = 269.0
offset_bottom = 122.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/main_menu"]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/main_menu/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="menu_label" type="Label" parent="CanvasLayer/main_menu/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 1
text = "Amogus Jumpscare Zone"
horizontal_alignment = 1

[node name="join_button" type="Button" parent="CanvasLayer/main_menu/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Join Server"

[node name="host_button" type="Button" parent="CanvasLayer/main_menu/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Host Server"

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/main_menu/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 60
theme_override_constants/margin_right = 60

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/main_menu/MarginContainer/VBoxContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="username_entry" type="LineEdit" parent="CanvasLayer/main_menu/MarginContainer/VBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
placeholder_text = "Username"

[node name="address_entry" type="LineEdit" parent="CanvasLayer/main_menu/MarginContainer/VBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
placeholder_text = "Address"

[node name="color_entry" type="ColorPickerButton" parent="CanvasLayer/main_menu/MarginContainer/VBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Player Color"
color = Color(0.988235, 0, 0.278431, 1)
edit_alpha = false

[node name="HSeparator" type="HSeparator" parent="CanvasLayer/main_menu/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="quit_button" type="Button" parent="CanvasLayer/main_menu/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Quit To Desktop"

[node name="volume_menu" type="PanelContainer" parent="CanvasLayer"]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -29.5
offset_top = -23.0
offset_right = 29.5
offset_bottom = 23.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(2, 2)

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/volume_menu"]
layout_mode = 2
size_flags_horizontal = 4

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/volume_menu/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 60
theme_override_constants/margin_right = 60

[node name="Label" type="Label" parent="CanvasLayer/volume_menu/VBoxContainer/MarginContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Volume"

[node name="volume_slider" type="HSlider" parent="CanvasLayer/volume_menu/VBoxContainer"]
layout_mode = 2
value = 50.0

[node name="CanvasLayer2" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="CanvasLayer2"]
material = SubResource("ShaderMaterial_b401s")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(1, 1, 1, 0)

[node name="CanvasLayer3" type="CanvasLayer" parent="."]

[node name="SubViewportContainer2" type="SubViewportContainer" parent="CanvasLayer3"]
visibility_layer = 2
offset_left = 119.0
offset_top = 9.0
offset_right = 2039.0
offset_bottom = 1089.0
mouse_filter = 2

[node name="SubViewport" type="SubViewport" parent="CanvasLayer3/SubViewportContainer2"]
transparent_bg = true
handle_input_locally = false
size = Vector2i(1920, 1080)
render_target_update_mode = 4

[node name="mark_cam" type="Camera3D" parent="CanvasLayer3/SubViewportContainer2/SubViewport"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.99801, 0)
cull_mask = 1047560
environment = SubResource("Environment_4yn81")
fov = 90.0

[connection signal="pressed" from="CanvasLayer/main_menu/MarginContainer/VBoxContainer/join_button" to="." method="_on_join_button_pressed"]
[connection signal="pressed" from="CanvasLayer/main_menu/MarginContainer/VBoxContainer/host_button" to="." method="_on_host_button_pressed"]
[connection signal="pressed" from="CanvasLayer/main_menu/MarginContainer/VBoxContainer/quit_button" to="." method="_on_quit_button_pressed"]
